--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
 	<head>
-		<title>stash</title>
+		<title>stash hi</title>
 	</head>
 	<body>
 		<h1>empty page!</h1>
